--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Desenvolvedor de Front-End">
-    <title>Israel - Desenvolvedor e Designer</title>
+    <meta name="description" content="Front-End Developer">
+    <title>Israel - Developer</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,48 +16,48 @@
     <header class="header">
         <h1 class="bold">Israel</h1>
 
-        <nav aria-label="primária">
+        <nav aria-label="primary">
             <ul class="header-menu">
-                <li><a class="menuitem" href="#expêriencia">Experiência</a></li>
-                <li><a class="menuitem" href="#formação">Formação</a></li>
-                <li><a class="menuitem" href="#contato">Contato</a></li>
+                <li><a class="menuitem" href="#experience">Experience</a></li>
+                <li><a class="menuitem" href="#education">Education</a></li>
+                <li><a class="menuitem" href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <main class="intro" aria-labelledby="introdução">
+    <main class="intro" aria-labelledby="introduction">
         <div class="intro-cover">
-            <img src="img/profile.jpg" alt="perfil" width="360" height="520">
+            <img src="img/profile.jpg" alt="profile" width="360" height="520">
         </div>
         <div class="intro-item">
-            <h1 id="introdução">Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
-            <p>Localizado em Goiás</p>
+            <h1 id="introduction">Developer<br>Front End &<br>UX/UI Designer</h1>
+            <p>Located in Goiás</p>
         </div>
     </main>
 
-        <section class="exp" aria-labelledby="expêriencia">
-            <h2 class="exp-titulo" id="expêriencia">Experiência</h2>
+        <section class="exp" aria-labelledby="experience">
+            <h2 class="exp-title" id="experience">Experience</h2>
 
-            <div class="exp-itens">
-                <p class="exp-texto">
-                    Desenvolvo projetos utilizando <strong>HTML</strong>,
-                    <strong>CSS</strong>, <strong>Javascript</strong>, <strong>React</strong> e outros frameworks.
-                    Para aplicativos web trabalhei no <strong>UX</strong> e <strong>UI Design</strong>
-                    de vários projetos profissionalmente.
+            <div class="exp-items">
+                <p class="exp-text">
+                    I develop projects using <strong>HTML</strong>,
+                    <strong>CSS</strong>, <strong>JavaScript</strong>, <strong>React</strong>, and other frameworks.
+                    For web applications, I worked on the <strong>UX</strong> and <strong>UI Design</strong>
+                    of several projects professionally.
                 </p>
-                <div class="exp-quadro">
-                    <span class="ano">2021-atual</span>
+                <div class="exp-frame">
+                    <span class="year">2021-present</span>
                     <h3>65A</h3>
-                    <p class="descricao">Desenvolvo scripts de automação utilizando Python e usando Ansible como base para alguns
-                        projetos. E também trabalho com Kubernetes e Docker em aplicativos e em ferramentas AIOps da empresa.</p>
-                    <h3 class="posicao">Desenvolvedor Júnior (automação)</h3>
+                    <p class="description">I develop automation scripts using Python and use Ansible as a basis for some
+                        projects. I also work with Kubernetes and Docker in applications and in the company's AIOps tools.</p>
+                    <h3 class="position">Developer (automation)</h3>
                     <ul>
                         <li class="toolitem">Python</li>
                         <li class="toolitem">Ansible</li>
                         <li class="toolitem">AWS</li>
                         <li class="toolitem">Azure</li>
-                        <li class="toolitem">Javascript</li>
-                        <li class="toolitem">IOs</li>
+                        <li class="toolitem">JavaScript</li>
+                        <li class="toolitem">iOS</li>
                         <li class="toolitem">Windows</li>
                         <li class="toolitem">Linux</li>
                         <li class="toolitem">Kubernetes</li>
@@ -65,35 +65,35 @@
                     </ul>
                 </div>
 
-                <div class="exp-quadro">
-                    <span class="ano">2021-atual</span>
+                <div class="exp-frame">
+                    <span class="year">2021-present</span>
                     <h3>65A</h3>
-                    <p class="descricao">Desenvolvo página para aplicativos e ferramentas da empresa.
-                        Utilizando apenas HTML, CSS, JavaScript e Python.</p>
-                    <h3 class="posicao">Desenvolvedor Júnior (front-end)</h3>
+                    <p class="description">I develop pages for the company's applications and tools.
+                        Using only HTML, CSS, JavaScript, and Python.</p>
+                    <h3 class="position">Junior Developer (front-end)</h3>
                     <ul>
                         <li class="toolitem">HTML</li>
                         <li class="toolitem">CSS</li>
                         <li class="toolitem">Python</li>
-                        <li class="toolitem">Javascript</li>
+                        <li class="toolitem">JavaScript</li>
                         <li class="toolitem">React</li>
                         <li class="toolitem">UX Design</li>
                         <li class="toolitem">UI Design</li>
                     </ul>
                 </div>
 
-                <div class="exp-quadro">
-                    <span class="ano">2015-16</span>
-                    <h3>Prefeitura de Anápolis</h3>
-                    <p class="descricao">Trabalhei com hardware de computadores, ensinei informática basica,
-                        algoritmo e lógica para iniciantes.</p>
-                    <h3 class="posicao">Estagiário</h3>
+                <div class="exp-frame">
+                    <span class="year">2015-16</span>
+                    <h3>City Hall of Anápolis</h3>
+                    <p class="description">I worked with computer hardware, teaching basic computer skills,
+                        algorithms, and logic to beginners.</p>
+                    <h3 class="position">Intern</h3>
                     <ul>
                         <li class="toolitem">Email Marketing</li>
                         <li class="toolitem">Excel</li>
-                        <li class="toolitem">Powerpoint</li>
+                        <li class="toolitem">PowerPoint</li>
                         <li class="toolitem">Word</li>
-                        <li class="toolitem">Lógica básica</li>
+                        <li class="toolitem">Basic Logic</li>
                         <li class="toolitem">Portugol</li>
                         <li class="toolitem">Python</li>
                     </ul>
@@ -101,46 +101,46 @@
             </div>
         </section>
 
-        <section class="formacao" aria-labelledby="formação">
-            <div class="formacao-container">
-                <h2 class="formaçao-titulo" id="formação">Formação</h2>
-                <div class="formacao-descriçao">
-                    <p class="formacao-texto">
-                        Minha mais recente experiência acadêmica foi o <strong class="bold">Bacharelado</strong>
-                        que fiz noa Estácio de Sá em <strong class="bold">Análise e Desenvolvimento de Sistemas</strong>.
-                        Além disso me mantenho sempre atualizado com cursos intensivos online.
+        <section class="education" aria-labelledby="education">
+            <div class="education-container">
+                <h2 class="education-title" id="education">Education</h2>
+                <div class="education-description">
+                    <p class="education-text">
+                        My most recent academic experience was the <strong class="bold">Bachelor's Degree</strong>
+                        I completed at Estácio de Sá in <strong class="bold">Systems Analysis and Development</strong>.
+                        Additionally, I continuously update my skills with intensive online courses.
                     </p>
-                    <ul class="formacao-itens">
+                    <ul class="education-items">
                         <li>
-                            <span class="faculdade-tipo">BACHAREL</span>
-                            <p class="bold">Análise e Desenvolvimento de Sistemas</p>
-                            <span class="faculdade-instituiçao">Estácio de Sá de Goiás</span>
+                            <span class="college-type">BACHELOR</span>
+                            <p class="bold">Systems Analysis and Development</p>
+                            <span class="college-institution">Estácio de Sá de Goiás</span>
                         </li>
 
                         <li>
-                            <span class="faculdade-tipo">CURSO</span>
-                            <p class="bold">Desenvolvimento Web e Design Digital</p>
-                            <span class="faculdade-instituiçao">Origamid</span>
+                            <span class="college-type">COURSE</span>
+                            <p class="bold">Web Development and Digital Design</p>
+                            <span class="college-institution">Origamid</span>
                         </li>
                         <li>
-                            <span class="faculdade-tipo">Estudos</span>
-                            <p class="bold">Introdução à Lógica e Algoritmos</p>
-                            <span class="faculdade-instituiçao">Cursoemvideo</span>
+                            <span class="college-type">Studies</span>
+                            <p class="bold">Introduction to Logic and Algorithms</p>
+                            <span class="college-institution">Cursoemvideo</span>
                         </li>
                     </ul>
-                    <div class="formacao-curso">
-                        <h3>Cursos Intensivos</h3>
+                    <div class="education-courses">
+                        <h3>Intensive Courses</h3>
                         <ul>
                             <li>UX Design & UI Design <span>56h</span></li>
                             <li>Front End, HTML, CSS, JavaScript, React <span>150h</span></li>
-                            <li>Mundos 1, 2 e 3 de Python <span>120h</span></li>
+                            <li>Python Levels 1, 2, and 3 <span>120h</span></li>
                         </ul>
                     </div>
-                    <div class="formacao-idioma">
-                        <h3>Idiomas</h3>
+                    <div class="education-languages">
+                        <h3>Languages</h3>
                         <ul>
-                            <li>Inglês <span>/ Fluente</span></li>
-                            <li>Espanhol <span>/ Intermediário</span></li>
+                            <li>English <span>/ Fluent</span></li>
+                            <li>Spanish <span>/ Intermediate</span></li>
                         </ul>
                     </div>
                 </div>
@@ -148,17 +148,17 @@
             </div>
         </section>
 
-    <footer class="footer" aria-label="contatos">
+    <footer class="footer" aria-label="contacts">
         <div class="footer-container">
-            <p class="footer-descricao" id="contato">
-                Estou disponível para trabalho no momento. Entre em contato comigo!
+            <p class="footer-description" id="contact">
+                I am currently available for work. Get in touch with me!
             </p>
             <ul>
-                <li class="contato">i.arantes.moraes@gmail.com</li>
-                <li class="contato">+55 62 9 8214-7861</li>
-                <li class="contato"><a href="https://www.linkedin.com/in/israel-am">@israel-am</a></li>
+                <li class="contact">i.arantes.moraes@gmail.com</li>
+                <li class="contact">+55 62 9 8214-7861</li>
+                <li class="contact"><a href="https://www.linkedin.com/in/israel-am">@israel-am</a></li>
             </ul>
-            <p class="direitos">Israel. Alguns direitos reservados</p>
+            <p class="rights">Israel. All rights reserved</p>
         </div>
     </footer>
 </body>
