--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <img src="img/profile.jpg" alt="profile" width="360" height="520">
         </div>
         <div class="intro-item">
-            <h1 id="introduction">Developer<br>Front End &<br>UX/UI Designer</h1>
-            <p>Located in Goiás</p>
+            <h1 id="introduction">Sofware Developer</h1>
+            <p>Located in Brazil</p>
         </div>
     </main>
 
@@ -151,10 +151,10 @@
     <footer class="footer" aria-label="contacts">
         <div class="footer-container">
             <p class="footer-description" id="contact">
-                I am currently available for work. Get in touch with me!
+                I am currently available for work!
             </p>
             <ul>
-                <li class="contact">i.arantes.moraes@gmail.com</li>
+                <li class="contact">israelarantes.m@gmail.com</li>
                 <li class="contact">+55 62 9 8214-7861</li>
                 <li class="contact"><a href="https://www.linkedin.com/in/israel-am">@israel-am</a></li>
             </ul>
