--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img src="img/profile.jpg" alt="profile" width="360" height="520">
         </div>
         <div class="intro-item">
-            <h1 id="introduction">Sofware Developer</h1>
+            <h1 id="introduction">Software Developer</h1>
             <p>Located in Brazil</p>
         </div>
     </main>
