--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav aria-label="primary">
             <ul class="header-menu">
                 <li><a class="menuitem" href="#experience">Experience</a></li>
-                <li><a class="menuitem" href="#education">Education</a></li>
+                <li><a class="menuitem" href="#education">Educa<br>tion</a></li>
                 <li><a class="menuitem" href="#contact">Contact</a></li>
             </ul>
         </nav>
