--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav aria-label="primary">
             <ul class="header-menu">
                 <li><a class="menuitem" href="#experience">Experience</a></li>
-                <li><a class="menuitem" href="#education">Educa<br>tion</a></li>
+                <li><a class="menuitem" href="#education">Education</a></li>
                 <li><a class="menuitem" href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -103,7 +103,7 @@
 
         <section class="education" aria-labelledby="education">
             <div class="education-container">
-                <h2 class="education-title" id="education">Education</h2>
+                <h2 class="education-title" id="education">Educa<br>tion</h2>
                 <div class="education-description">
                     <p class="education-text">
                         My most recent academic experience was the <strong class="bold">Bachelor's Degree</strong>
