--- a/index.html
+++ b/index.html
@@ -40,50 +40,49 @@
 
             <div class="exp-items">
                 <p class="exp-text">
-                    I develop projects using <strong>HTML</strong>,
-                    <strong>CSS</strong>, <strong>JavaScript</strong>, <strong>React</strong>, and other frameworks.
-                    For web applications, I worked on the <strong>UX</strong> and <strong>UI Design</strong>
-                    of several projects professionally.
+                    I develop projects using <strong>Python</strong>,
+                    <strong>AWS</strong>, <strong>KVMs</strong>, <strong>Kubernetes</strong>, and other microservices
+                    For web applications, I built <strong>Back-ends</strong> and <strong>APIs</strong>
+                    of projects professionally.
                 </p>
                 <div class="exp-frame">
-                    <span class="year">2021-present</span>
+                    <span class="year">2021-2023</span>
                     <h3>65A</h3>
-                    <p class="description">I develop automation scripts using Python and use Ansible as a basis for some
-                        projects. I also work with Kubernetes and Docker in applications and in the company's AIOps tools.</p>
-                    <h3 class="position">Developer (automation)</h3>
+                    <p class="description">I develop back-end automation scripts, APIs and other features using Python, Ansible and other technologies as a basis for some
+                        projects. I also work with Kubernetes and Docker developing real-time observability and automation on AIOps tools.</p>
+                    <h3 class="position">Software Developer</h3>
                     <ul>
                         <li class="toolitem">Python</li>
                         <li class="toolitem">Ansible</li>
                         <li class="toolitem">AWS</li>
                         <li class="toolitem">Azure</li>
-                        <li class="toolitem">JavaScript</li>
-                        <li class="toolitem">iOS</li>
                         <li class="toolitem">Windows</li>
-                        <li class="toolitem">Linux</li>
+                        <li class="toolitem">KVMs</li>
                         <li class="toolitem">Kubernetes</li>
                         <li class="toolitem">Docker</li>
                     </ul>
                 </div>
 
                 <div class="exp-frame">
-                    <span class="year">2021-present</span>
+                    <span class="year">2023-present</span>
                     <h3>65A</h3>
-                    <p class="description">I develop pages for the company's applications and tools.
-                        Using only HTML, CSS, JavaScript, and Python.</p>
-                    <h3 class="position">Junior Developer (front-end)</h3>
+                    <p class="description">I work with Kubernetes and Docker to monitor and export metrics from clusters and containerized applications. 
+                        Additionally, I automate agents with Python to collect application logs with Prometheus</p>
+                    <h3 class="position">DevOps Engineer</h3>
                     <ul>
-                        <li class="toolitem">HTML</li>
-                        <li class="toolitem">CSS</li>
+                        <li class="toolitem">Kubernetes</li>
+                        <li class="toolitem">Docker</li>
                         <li class="toolitem">Python</li>
-                        <li class="toolitem">JavaScript</li>
-                        <li class="toolitem">React</li>
-                        <li class="toolitem">UX Design</li>
-                        <li class="toolitem">UI Design</li>
+                        <li class="toolitem">Prometheus</li>
+                        <li class="toolitem">OpenTelemetry</li>
+                        <li class="toolitem">Telegraf-operator</li>
+                        <li class="toolitem">Grafana</li>
+                        <li class="toolitem">Istio</li>
                     </ul>
                 </div>
 
                 <div class="exp-frame">
-                    <span class="year">2015-16</span>
+                    <span class="year">2018-2021</span>
                     <h3>City Hall of Anápolis</h3>
                     <p class="description">I worked with computer hardware, teaching basic computer skills,
                         algorithms, and logic to beginners.</p>
@@ -93,7 +92,7 @@
                         <li class="toolitem">Excel</li>
                         <li class="toolitem">PowerPoint</li>
                         <li class="toolitem">Word</li>
-                        <li class="toolitem">Basic Logic</li>
+                        <li class="toolitem">Basic Programing Logic</li>
                         <li class="toolitem">Portugol</li>
                         <li class="toolitem">Python</li>
                     </ul>
@@ -103,7 +102,7 @@
 
         <section class="education" aria-labelledby="education">
             <div class="education-container">
-                <h2 class="education-title" id="education">Educa<br>tion</h2>
+                <h2 class="education-title" id="education">Edu<br>cation</h2>
                 <div class="education-description">
                     <p class="education-text">
                         My most recent academic experience was the <strong class="bold">Bachelor's Degree</strong>
@@ -119,21 +118,22 @@
 
                         <li>
                             <span class="college-type">COURSE</span>
-                            <p class="bold">Web Development and Digital Design</p>
-                            <span class="college-institution">Origamid</span>
+                            <p class="bold">Kubernetes</p>
+                            <span class="college-institution">Udemy</span>
                         </li>
                         <li>
                             <span class="college-type">Studies</span>
-                            <p class="bold">Introduction to Logic and Algorithms</p>
+                            <p class="bold">Intensive Python Course</p>
                             <span class="college-institution">Cursoemvideo</span>
                         </li>
                     </ul>
                     <div class="education-courses">
                         <h3>Intensive Courses</h3>
                         <ul>
-                            <li>UX Design & UI Design <span>56h</span></li>
-                            <li>Front End, HTML, CSS, JavaScript, React <span>150h</span></li>
-                            <li>Python Levels 1, 2, and 3 <span>120h</span></li>
+                            <li>Python, Django <span>160h</span></li>
+                            <li>HTML, CSS, TypeScript, React <span>120h</span></li>
+                            <li>Kubernetes<span>64h</span></li>
+                            <li>Docker<span>30h</span></li>
                         </ul>
                     </div>
                     <div class="education-languages">
