--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="exp-items">
                 <p class="exp-text">
                     I develop projects using <strong>Python</strong>,
-                    <strong>AWS</strong>, <strong>KVMs</strong>, <strong>Kubernetes</strong>, and other microservices
+                    <strong>AWS</strong>, <strong>KVMs</strong>, <strong>Kubernetes</strong>, and other microservices.
                     For web applications, I built <strong>Back-ends</strong> and <strong>APIs</strong>
                     of projects professionally.
                 </p>
