--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <p class="exp-text">
                     I develop projects using <strong>Python</strong>,
                     <strong>AWS</strong>, <strong>KVMs</strong>, <strong>Kubernetes</strong>, and other microservices.
-                    For web applications, I built <strong>Back-ends</strong> and <strong>APIs</strong>
-                    of projects professionally.
+                    For web applications, I worked on <strong>Back-ends</strong> and built <strong>APIs</strong>
+                    on projects professionally.
                 </p>
                 <div class="exp-frame">
                     <span class="year">2021-2023</span>
